//
//  User action tracking
//

syntax = "proto2";
package user;

option java_package = "com.blitz.user.proto";
option java_generic_services = true;
option java_multiple_files = true;

import "objectivec-descriptor.proto";
option (google.protobuf.objectivec_file_options).package = "";
option (google.protobuf.objectivec_file_options).class_prefix = "B";
option (google.protobuf.objectivec_file_options).relax_camel_case = true;

import "util.proto";

//
//  User event tracking
//
message UserEvent {
  required util.Timestamp timestamp = 1;
  optional util.Location location = 2;
  required string event = 3;
  repeated string eventData = 4;
}

message UserEventsRequest {
  repeated UserEvent userEvents = 1;
}

message UserEventsResponse {
  optional util.Timestamp latestEventUpdate = 1;
}

